# duckdb-spark-connect-extension

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: MainDistributionPipeline.yml
docs/: NEXT_README.md  README.md
proto/: CMakeLists.txt
proto/myproto/: sample.proto
scripts/: bootstrap-template.py
src/: grpc_client.cpp  quack_extension.cpp  spark_attach.cpp  spark_client.cpp  spark_extension.cpp  spark_storage.cpp  spark_utils.cpp  squawk_extension.cpp
src/include/: grpc_client.hpp  spark_attach.hpp  spark_client.hpp  spark_extension.hpp  spark_storage.hpp  spark_utils.hpp  squawk_extension.hpp
src/include/storage/: spark_catalog.hpp  spark_options.hpp  spark_transaction.hpp
src/storage/: spark_catalog.cpp  spark_transaction.cpp
test/: README.md
test/sql/: quack.test  spark.test
test/sql/storage/: attach_default.test
